# panda-practice

./: 311.ipynb  README.md  chipotle.ipynb  hello.py  panda_csv_parsing.ipynb  pyproject.toml  titanic.ipynb
data/: chipotle.csv  complaints.csv
