[tool.poetry]
name = "panda-practice"
version = "0.1.0"
description = ""
authors = ["paritosh baghel <paritoshmmmec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.24.0"
jupyter = "^1.0.0"
matplotlib = "^3.6.2"
black = "^22.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
